--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -33,6 +33,7 @@
           <tr>
             <td><%= id %></td>
             <td><%= urls[id] %></td>
+            <td><form method ="POST" action="<%= `/urls/${id}/delete` %>">...</form></td>
           </tr>
         <% } %>
       </tbody>
