Add form to card footer

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -21,7 +21,12 @@
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
       </div>
-      <div class="card-footer text-muted"></div>
+      <div class="card-footer text-muted">
+        <h5>Edit</h5>
+        <p>
+          <form method="POST" action=""></form>
+        </p>
+      </div>
     </div>
     <!-- Bootstrap JS -->
     <script
