Build form to submit new URL

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -24,7 +24,15 @@
       <div class="card-footer text-muted">
         <h5>Edit</h5>
         <p>
-          <form method="POST" action=""></form>
+          <form method="POST" action="">
+            <label for="newURL">New URL:</label>
+            <input
+              type="text"
+              name="newURL"
+              placeholder="http://"
+            />
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
         </p>
       </div>
     </div>
