--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -35,8 +35,16 @@
           <tr>
             <td><%= id %></td>
             <td><%= urls[id] %></td>
-            <td><form method ="POST" action="<%= `/urls/${id}/delete` %>"><button type="submit">Delete</button></form></td>
-            <td><form method="POST" action="/urls/<%= id %>"><button type="submit">Edit</button></form></td>
+            <td>
+              <form method="POST" action="/urls/<%= id %>/delete">
+                <button type="submit">Delete</button>
+              </form>
+            </td>
+            <td>
+              <form method="POST" action="/urls/<%= id %>">
+                <button type="submit">Edit</button>
+              </form>
+            </td>
           </tr>
         <% } %>
       </tbody>
