Change edit button from POST to GET

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -41,7 +41,7 @@
               </form>
             </td>
             <td>
-              <form method="POST" action="/urls/<%= id %>">
+              <form method="GET" action="/urls/<%= id %>">
                 <button type="submit">Edit</button>
               </form>
             </td>
