Add POST action for new URL

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -24,7 +24,7 @@
       <div class="card-footer text-muted">
         <h5>Edit</h5>
         <p>
-          <form method="POST" action="">
+          <form method="POST" action="/urls/<%= id %>">
             <label for="newURL">New URL:</label>
             <input
               type="text"
