Add username display next to login form

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,6 +19,7 @@
       </div>
     </div>
     <div>
+      <span>Logged in as: <%= username %>!</span>
       <form method="POST" action="/login">
         <input
           type="text"
