--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,15 +19,18 @@
       </div>
     </div>
     <div>
-      <span>Logged in as: <%= username %>!</span>
-      <form method="POST" action="/login">
-        <input
-          type="text"
-          name="username"
-          placeholder="Username"
-        />
-        <button type="submit">Login</button>
-      </form>
+      <% if (username !== undefined) { %>
+        <span>Logged in as: <%= username %>!</span>
+      <% } else { %>
+        <form method="POST" action="/login">
+          <input
+            type="text"
+            name="username"
+            placeholder="Username"
+          />
+          <button type="submit">Login</button>
+        </form>  
+      <% } %>
     </div>
   </nav>
 </header>
