Add logout button if username is present

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -21,6 +21,9 @@
     <div>
       <% if (username !== undefined) { %>
         <span>Logged in as: <%= username %>!</span>
+        <form method="POST" action="/logout">
+          <button type="submit">Logout</button>
+        </form>
       <% } else { %>
         <form method="POST" action="/login">
           <input
