--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,12 +19,7 @@
       </div>
     </div>
     <div>
-      <% if (username !== undefined) { %>
-        <span>Logged in as: <%= username %>!</span>
-        <form method="POST" action="/logout">
-          <button type="submit">Logout</button>
-        </form>
-      <% } else { %>
+      <% if (username === undefined) { %>
         <form method="POST" action="/login">
           <input
             type="text"
@@ -33,6 +28,11 @@
           />
           <button type="submit">Login</button>
         </form>  
+        <% } else { %>
+        <span>Logged in as: <%= username %>!</span>
+        <form method="POST" action="/logout">
+          <button type="submit">Logout</button>
+        </form>
       <% } %>
     </div>
   </nav>
