--- a/views/register.ejs
+++ b/views/register.ejs
@@ -21,7 +21,7 @@
   <%- include('partials/_header') %>
   <main style="margin: 1em;">
     <h3>Register for TinyApp</h3>
-    <form class="form-inline" action="/register" method="POST">
+    <form action="/register" method="POST">
       <label for="email">Email:</label>
       <input
         type="email"
