Add CSS styling for button

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -32,7 +32,7 @@
         type="password"
         name="password"
       />
-      <button type="submit">Register</button>
+      <button type="submit" class="btn btn-primary">Register</button>
     </form>
   </main>
   <!-- Bootstrap JS -->
