--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -29,7 +29,7 @@
           <button type="submit">Login</button>
         </form>  
         <% } else { %>
-        <span>Logged in as: <%= username %>!</span>
+        <span>Logged in as: <%= user.email %>!</span>
         <form method="POST" action="/logout">
           <button type="submit">Logout</button>
         </form>
