Change if code from username to user

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div>
-      <% if (username === undefined) { %>
+      <% if (user === undefined) { %>
         <form method="POST" action="/login">
           <input
             type="text"
