--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div>
-      <% if (user === null) { %>
+      <% if (user === null || user === undefined) { %>
         <form method="GET" action="/register">
           <button type="submit">Register</button>
         </form>
