--- a/views/error.ejs
+++ b/views/error.ejs
@@ -21,7 +21,7 @@
   <%- include('partials/_header') %>
   <main style="margin: 1em;">
     <h3>Error</h3>
-    
+    <p><%= message %></p>
   </main>
   <!-- Bootstrap JS -->
   <script
