--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -49,6 +49,7 @@
         <% } %>
       </tbody>
     </table>
+    <a href='/urls/new'>Create a New Short Link</a>
   </main>
   <!-- Bootstrap JS -->
   <script
